--- a/resources/views/includes/list-item.edge
+++ b/resources/views/includes/list-item.edge
@@ -1,4 +1,4 @@
-<a href="{{ route("profile", {id: entry.id}) }}" class="list-group-item d-flex list-group-item-action">
+<a href="{{ route("profile.show", {id: entry.id}) }}" class="list-group-item d-flex list-group-item-action">
     <div class="mx-auto p-2 flex-grow-1 bd-highlight">
         {{entry.title}} {{entry.name}}
     </div>
