--- a/resources/views/includes/navbar.edge
+++ b/resources/views/includes/navbar.edge
@@ -12,6 +12,15 @@
       <li class="nav-item">
         <a class="nav-link" href="{{route('list')}}">List</a>
       </li>
+      <li class="nav-item">
+        <form class="form-inline my-2 my-lg-0">
+          <select class="custom-select">
+            @each(each in sessions)
+            <option value="{{each}}">{{each}}</option>
+            @endeach
+          </select>
+        </form>
+      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0" tabindex="-1">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
